Add additional snapshot path to artifact upload in CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -208,4 +208,5 @@ jobs:
           path: |
             tests/jest/vfb/snapshots/*/*/__diff_output__/*.png
             tests/jest/vfb/snapshots/*/*/*.png
+            tests/jest/vfb/snapshots/*/*.png
           retention-days: 5
